Bug 117205 - crash when moving (move up /move down) an item in a list (gtk/gtk3)
Summary: crash when moving (move up /move down) an item in a list (gtk/gtk3)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, haveBacktrace, regression
Depends on:
Blocks:
 
Reported: 2018-04-24 11:02 UTC by Jean-Baptiste Faure
Modified: 2018-05-03 19:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test file to reproduce the crash (18.46 KB, application/vnd.oasis.opendocument.presentation)
2018-04-24 11:02 UTC, Jean-Baptiste Faure
Details
trace from gdb (8.26 KB, text/x-log)
2018-04-24 11:03 UTC, Jean-Baptiste Faure
Details
gdb backtrace (18.72 KB, text/plain)
2018-04-24 17:15 UTC, Xisco Faulí
Details
this button (198.63 KB, image/png)
2018-04-24 19:25 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2018-04-24 11:02:28 UTC
Created attachment 141587 [details]
test file to reproduce the crash

Step to reproduce:
1/ open the attached test file
2/ click on the last item
3/ in the sidebar, click on "Move Up" button

=> crash (OpenGL enabled or not), with a clean new user profile too.

Version: 6.1.0.0.alpha0+
Build ID: db9f6c44cac246250e89ca4e9aa127dee912d7f5
CPU threads: 4; OS: Linux 4.4; UI render: GL; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2018-04-24 11:03:17 UTC
Created attachment 141588 [details]
trace from gdb

backtrace from gdb

Best regards. JBF
Comment 2 Xisco Faulí 2018-04-24 17:06:34 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-04 11:23:22 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-04 13:17:14 +0200
commit 891e41fac81fbd8d5cdb277b26639abfd25a7143 (patch)
tree 0ac884b349c5c5e21dea26d1ca476736fe3c2673
parent 1e0d5d0c98dd1128c4ab7a9dcc4e9ae2d2878390 (diff)
dead code in AccessibleTextHelper_Impl::UpdateVisibleChildren
ever since
    commit 60f11adb950e4f9645cc9ecb0f5af8235cc97366
    Date:   Wed Nov 27 13:03:45 2013 +0000
    Integrate branch of IAccessible2

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 3 Xisco Faulí 2018-04-24 17:15:15 UTC
Created attachment 141604 [details]
gdb backtrace
Comment 4 Xisco Faulí 2018-04-24 17:19:14 UTC
I can't reproduce it in

Version: 6.1.0.0.alpha0+
Build ID: e31a5365091d8658ecce374bbc339a9d832e1a15
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Gtk/Gtk3 only...
Comment 5 Julien Nabet 2018-04-24 19:22:59 UTC
I must click on last item of what to reproduce this?
last item of sidebar is navigator but when clicking on it, I don't see "Move up" button.
Comment 6 Xisco Faulí 2018-04-24 19:25:46 UTC
Created attachment 141609 [details]
this button
Comment 7 Jean-Baptiste Faure 2018-04-24 19:27:59 UTC
(In reply to Julien Nabet from comment #5)
> I must click on last item of what to reproduce this?

Last sentence of the slide :-)

Best regards. JBF
Comment 8 Julien Nabet 2018-04-24 19:59:16 UTC
Thank you both of you for your feedback, I could reproduce with master sources updated today (gtk3) with same bt.
I noticed these logs:
warn:legacy.osl:24119:24119:svx/source/accessibility/AccessibleTextHelper.cxx:844: AccessibleTextHelper: range invalid
warn:vcl:24119:24119:vcl/source/app/salusereventlist.cxx:119: Uncaught St12length_error vector::_M_default_append
Comment 9 Julien Nabet 2018-04-24 21:08:15 UTC
I submitted a patch to review here:
https://gerrit.libreoffice.org/#/c/53421/
Comment 10 Julien Nabet 2018-04-25 17:09:59 UTC
The patch was wrong. Since i don t have any idea why, i let other deal with this
Comment 11 Commit Notification 2018-05-02 10:38:22 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=03a4b6eb58b29c0ab4bb85f756923c46618d02ff

tdf#117205 impress crash when moving an item in a list

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2018-05-03 10:21:36 UTC
Verified in

Version: 6.1.0.0.alpha1+
Build ID: f1579d3d6c5f5f3a651825e035b93bee7a4f43c6
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

@Noel, Thanks for fixing this!!
Comment 13 Jean-Baptiste Faure 2018-05-03 19:54:42 UTC
Verified in 

Version: 6.1.0.0.alpha1+
Build ID: 6441eaaa5fa72946f52579426cc8847a42d94e10
Threads CPU : 4; OS : Linux 4.4; UI Render : par défaut; VCL: gtk3; 
Ubuntu_16.04_x86-64
Locale : fr-FR (fr_FR.UTF-8); Calc: threaded

Thank you very much

Best regards. JBF