tdf#117205: fix crash when moving up an item

It seems mnLastVisibleChild can be used during the for loop
so keep it updated regularly

Regression from 891e41fac81fbd8d5cdb277b26639abfd25a7143

Change-Id: I28b0467a8ec8e34ac82be00389d31cc074e66e56